fixed jumping accordion on courses page

--- a/app/styles/scss/modules/_course-block.scss
+++ b/app/styles/scss/modules/_course-block.scss
@@ -27,12 +27,12 @@
             }
         }
         .course-action {
-            margin-top: 25px;
 
             .course-schedule {
                 height: 40px;
                 display: inline-block;
                 margin-bottom: 25px;
+                padding-top: 25px;
 
                 & > span {
                     color: #787878;
@@ -71,8 +71,6 @@
 
     .accordion-inner {
         border-bottom: 1px dashed $accordionTextColor;
-        margin-bottom: 10px;
-
         & .list-unstyled > li.col-lg-6 > span {
             font-style: italic;
         }
